Small fix to default skin's tables. Very long words in td cells are still not being wrapped, but that's not something browsers support right now, so users will have to deal with it.
git-svn-id: https://znc.svn.sourceforge.net/svnroot/znc/trunk@1909 726aef4b-f618-498e-8847-2d620e286838

--- a/webskins/_default_/pub/_default_.css
+++ b/webskins/_default_/pub/_default_.css
@@ -70,7 +70,7 @@ h1 {
 #main {
 	padding: 0 20px 20px 20px;
 	font-size: 90%;
-	width: 700px;
+	width: 680px;
 }
 
 #menu {
@@ -188,14 +188,6 @@ h3 {
 .textsection, .toptable {
 	width: 670px;
 	overflow: hidden;
-}
-
-.toptable table {
-	max-width: 670px;
-}
-
-.toptable td {
-	word-wrap: break-word;
 }
 
 .section {
@@ -359,4 +351,8 @@ td.mod_name,
 	padding: 0 0 3px 1px;
 	margin-bottom: 10px;
 	border-bottom: 1px solid #aaa;
+}
+
+td {
+	word-wrap: break-word;
 }
